@@ -44,6 +44,7 @@
              new global attribute <exclude_from_update> added (M. Fischer)
   - feature: optional telnet password added / telnet port is optional
   - feature: holiday returns all matches, not only the first.
+  - change:  CULflash separated from updatefhem to a new module (M. Fischer)
 
 - 2011-12-31 (5.2)
   - bugfix:  applying smallscreen attributes to firefox/opera
